--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DESIGNO HOME</title>
-    <link rel="stylesheet" href="./styles/style.min.css" />
+    <link rel="stylesheet" href="../../styles/style.min.css" />
   </head>
   <body>
     <!-- HEADER START -->
     <header class="header">
       <div class="hedaer__container container">
         <div class="header__logo">
-          <a class="hader__logo__link" href="./index.html">
+          <a class="hader__logo__link" href="../../index.html">
             <img
               class="hedaer__image"
-              src="./src/images/home/desktop/Oval.svg"
+              src="../images/home/desktop/Oval.svg"
               alt=""
               width="196"
               height="24"
@@ -29,19 +29,13 @@
           </label>
           <ul class="sitenav__list">
             <li class="sitenav__item">
-              <a href="./src/pages/about.html" class="sitenav__link"
-                >OUR COMPANY</a
-              >
+              <a href="./about.html" class="sitenav__link">OUR COMPANY</a>
             </li>
             <li class="sitenav__item">
-              <a href="./src/pages/location.html" class="sitenav__link"
-                >LOCATIONS</a
-              >
+              <a href="./contact.html" class="sitenav__link">LOCATIONS</a>
             </li>
             <li class="sitenav__item">
-              <a href="./src/pages/contact.html" class="sitenav__link"
-                >CONTACT</a
-              >
+              <a href="./contact.html" class="sitenav__link">CONTACT</a>
             </li>
           </ul>
         </nav>
@@ -51,114 +45,125 @@
     <!-- MAIN START -->
     <main class="main">
       <section class="hero">
-        <div class="hero__container container">
-          <div class="hero__content">
-            <h1 class="hero__title">
-              Award-winning custom <br />
-              designs and digital <br />
-              branding solutions
-            </h1>
-            <p class="hero__subtitle">
-              With over 10 years in the industry, we are experienced in creating
-              fully responsive websites, app design, and engaging brand
-              experiences. Find out more about our services.
+        <div class="about__hero__container container">
+          <div class="about__hero__content">
+            <h1 class="about__hero__title">About Us</h1>
+            <p class="about__hero__subtitle">
+              Founded in 2010, we are a creative agency that produces lasting
+              results for our clients. We’ve partnered with many startups,
+              corporations, and nonprofits alike to craft designs that make real
+              impact. We’re always looking forward to creating brands, products,
+              and digital experiences that connect with our clients’ audiences.
             </p>
-            <a class="hero__link btn-dark" href="#"> Learn More </a>
           </div>
 
-          <div class="hero__box">
-            <div class="hero__box__images">
+          <img
+            class="about__hero__image"
+            src="../images/about/desktop/image-about-hero.jpg"
+            alt=""
+            width="476"
+            height="480"
+          />
+        </div>
+      </section>
+
+      <section class="talent">
+        <div class="talent__container container">
+          <img
+            class="talent__container__image"
+            src="../images/about/desktop/image-world-class-talent.jpg"
+            alt=""
+            width="476"
+            height="640"
+          />
+          <div class="talent__box">
+            <h2 class="talent__title">World-class talent</h2>
+            <p class="talent__subtitle">
+              We are a crew of strategists, problem-solvers, and technologists.
+              Every design is thoughtfully crafted from concept to launch,
+              ensuring success in its given market. We are constantly updating
+              our skills in a myriad of platforms.
+              <br />
+              <br />
+              Our team is multi-disciplinary and we are not merely interested in
+              form — content and meaning are just as important. We give great
+              importance to craftsmanship, service, and prompt delivery. Clients
+              have always been impressed with our high-quality outcomes that
+              encapsulates their brand’s story and mission.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="location">
+        <div class="location__container container">
+          <div class="location__content">
+            <div class="location__content__box">
               <img
-                src="./src/images/home/desktop/image-hero-phone.png"
+                class="location__image"
+                src="../images/shared/desktop/illustration-canada.svg"
                 alt=""
-                class="hero__box__image"
-                width="572"
-                height="540"
+                width="182"
+                height="143"
               />
+              <h3 class="location__title">CANADA</h3>
+              <a href="./location.html" class="btn-light location__btn"
+                >SEE LOCATION</a
+              >
+            </div>
+            <div class="location__content__box">
+              <img
+                class="location__image"
+                src="../images/shared/desktop/illustration-australia.svg"
+                alt=""
+                width="182"
+                height="143"
+              />
+              <h3 class="location__title">AUSTRALIA</h3>
+              <a href="./location.html" class="btn-light location__btn"
+                >SEE LOCATION</a
+              >
+            </div>
+            <div class="location__content__box">
+              <img
+                class="location__image"
+                src="../images/shared/desktop/illustration-united-kingdom.svg"
+                alt=""
+                width="202"
+                height="202"
+              />
+              <h3 class="location__title">UNITED KINGDOM</h3>
+              <a href="./location.html" class="btn-light location__btn"
+                >SEE LOCATION</a
+              >
             </div>
           </div>
         </div>
       </section>
 
-      <section class="project">
-        <div class="project__container container">
-          <div class="project__box">
-            <a href="./src/pages/project/WebDesign.html" class="project__link">
-              <h2 class="project__box__title">Web Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
-            </a>
-            <a href="./src/pages/project/WebApp.html" class="project__link">
-              <h2 class="project__box__title">App Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
-            </a>
-            <a href="./src/pages/project/WebGraphic.html" class="project__link">
-              <h2 class="project__box__title">Graphic Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
-            </a>
-          </div>
-        </div>
-      </section>
+      <section class="deal">
+        <div class="deal__container container">
+          <div class="deal__box">
+            <h2 class="deal__title">The real deal</h2>
 
-      <section class="feature">
-        <div class="feature__container container">
-          <div class="feature__content">
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-passionate.svg"
-                alt=""
-                class="feature__box__image"
-              />
-              <div class="feature__box__content">
-                <h4 class="feature__box__title">PASSIONATE</h4>
-                <p class="feature__box__subtitle">
-                  Each project starts with an in-depth brand research to ensure
-                  we only create products that serve a purpose. We merge art,
-                  design, and technology into exciting new solutions.
-                </p>
-              </div>
-            </div>
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-resourceful.svg"
-                alt=""
-                class="feature__box__image"
-              />
-              <div class="feature__box__box__content">
-                <h4 class="feature__box__title">RESOURCEFUL</h4>
-                <p class="feature__box__subtitle">
-                  Everything that we do has a strategic purpose. We use an agile
-                  approach in all of our projects and value customer
-                  collaboration. It guarantees superior results that fulfill our
-                  clients’ needs.
-                </p>
-              </div>
-            </div>
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-friendly.svg"
-                alt=""
-                class="feature__box__image"
-              />
-
-              <div class="feature__box__content">
-                <h4 class="feature__box__title">FRIENDLY</h4>
-                <p class="feature__box__subtitle">
-                  We are a group of enthusiastic folks who know how to put
-                  people first. Our success depends on our customers, and we
-                  strive to give them the best experience a company can provide.
-                </p>
-              </div>
-            </div>
+            <p class="deal__subtitle">
+              As strategic partners in our clients’ businesses, we are ready to
+              take on any challenge as our own. Solving real problems require
+              empathy and collaboration, and we strive to bring a fresh
+              perspective to every opportunity. We make design and technology
+              more accessible and give you tools to measure success.
+              <br />
+              <br />
+              We are visual storytellers in appealing and captivating ways. By
+              combining business and marketing strategies, we inspire audiences
+              to take action and drive real results.
+            </p>
           </div>
+          <img
+            src="../images/about/desktop/image-real-deal.jpg"
+            alt=""
+            class="deal__image"
+          />
         </div>
       </section>
 
@@ -183,7 +188,7 @@
           <a class="footer__logo__link" href="./index.html">
             <img
               class="footer__image"
-              src="./src/images/home/desktop/icon-logo-white.svg"
+              src="../images/home/desktop/icon-logo-white.svg"
               alt=""
               width="196"
               height="24"
