--- a/src/pages/location.html
+++ b/src/pages/location.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DESIGNO HOME</title>
-    <link rel="stylesheet" href="./styles/style.min.css" />
+    <link rel="stylesheet" href="../../styles/style.min.css" />
   </head>
   <body>
     <!-- HEADER START -->
     <header class="header">
       <div class="hedaer__container container">
         <div class="header__logo">
-          <a class="hader__logo__link" href="./index.html">
+          <a class="hader__logo__link" href="../../index.html">
             <img
               class="hedaer__image"
-              src="./src/images/home/desktop/Oval.svg"
+              src="../images/home/desktop/Oval.svg"
               alt=""
               width="196"
               height="24"
@@ -29,19 +29,13 @@
           </label>
           <ul class="sitenav__list">
             <li class="sitenav__item">
-              <a href="./src/pages/about.html" class="sitenav__link"
-                >OUR COMPANY</a
-              >
+              <a href="./about.html" class="sitenav__link">OUR COMPANY</a>
             </li>
             <li class="sitenav__item">
-              <a href="./src/pages/location.html" class="sitenav__link"
-                >LOCATIONS</a
-              >
+              <a href="./contact.html" class="sitenav__link">LOCATIONS</a>
             </li>
             <li class="sitenav__item">
-              <a href="./src/pages/contact.html" class="sitenav__link"
-                >CONTACT</a
-              >
+              <a href="./contact.html" class="sitenav__link">CONTACT</a>
             </li>
           </ul>
         </nav>
