--- a/src/pages/project/WebDesign.html
+++ b/src/pages/project/WebDesign.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DESIGNO HOME</title>
-    <link rel="stylesheet" href="./styles/style.min.css" />
+    <title>DESIGNO Web Design</title>
+    <link rel="stylesheet" href="../../../styles/style.min.css" />
   </head>
   <body>
     <!-- HEADER START -->
     <header class="header">
       <div class="hedaer__container container">
         <div class="header__logo">
-          <a class="hader__logo__link" href="./index.html">
+          <a class="hader__logo__link" href="../../../index.html">
             <img
               class="hedaer__image"
-              src="./src/images/home/desktop/Oval.svg"
+              src="../../images/home/desktop/Oval.svg"
               alt=""
               width="196"
               height="24"
@@ -29,19 +29,13 @@
           </label>
           <ul class="sitenav__list">
             <li class="sitenav__item">
-              <a href="./src/pages/about.html" class="sitenav__link"
-                >OUR COMPANY</a
-              >
+              <a href="#" class="sitenav__link">OUR COMPANY</a>
             </li>
             <li class="sitenav__item">
-              <a href="./src/pages/location.html" class="sitenav__link"
-                >LOCATIONS</a
-              >
+              <a href="#" class="sitenav__link">LOCATIONS</a>
             </li>
             <li class="sitenav__item">
-              <a href="./src/pages/contact.html" class="sitenav__link"
-                >CONTACT</a
-              >
+              <a href="#" class="sitenav__link">CONTACT</a>
             </li>
           </ul>
         </nav>
@@ -50,114 +44,144 @@
     <!-- HEADER END -->
     <!-- MAIN START -->
     <main class="main">
-      <section class="hero">
-        <div class="hero__container container">
-          <div class="hero__content">
-            <h1 class="hero__title">
-              Award-winning custom <br />
-              designs and digital <br />
-              branding solutions
-            </h1>
-            <p class="hero__subtitle">
-              With over 10 years in the industry, we are experienced in creating
-              fully responsive websites, app design, and engaging brand
-              experiences. Find out more about our services.
+      <section class="web__design__hero">
+        <div class="web__design__hero__container container">
+          <div class="web__design__hero__content">
+            <h1 class="web__design__hero__title">Web Design</h1>
+            <p class="web__design__hero__subtitle">
+              We build websites that serve as powerful marketing tools
+              <br class="web__design__hero__subtitle__br" />
+              and bring memorable brand experiences.
             </p>
-            <a class="hero__link btn-dark" href="#"> Learn More </a>
-          </div>
-
-          <div class="hero__box">
-            <div class="hero__box__images">
-              <img
-                src="./src/images/home/desktop/image-hero-phone.png"
-                alt=""
-                class="hero__box__image"
-                width="572"
-                height="540"
-              />
-            </div>
           </div>
         </div>
       </section>
 
-      <section class="project">
-        <div class="project__container container">
-          <div class="project__box">
-            <a href="./src/pages/project/WebDesign.html" class="project__link">
-              <h2 class="project__box__title">Web Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
+      <section class="web__design__page">
+        <div class="web__design__page__conatiner container">
+          <div class="web__design__page__box">
+            <a href="#" class="web__design__page__box__card">
+              <img
+                src="../../images/web-design/desktop/image-express.jpg"
+                class="web__design__page__box__car__image"
+                alt=""
+                width="350"
+                height="320"
+              />
+              <div class="web__design__page__box__car__box">
+                <h3 class="web__design__page__box__car__box__title">EXPRESS</h3>
+                <p class="web__design__page__box__car__box__subtitle">
+                  A multi-carrier shipping website for ecommerce businesses
+                </p>
+              </div>
             </a>
-            <a href="./src/pages/project/WebApp.html" class="project__link">
-              <h2 class="project__box__title">App Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
+            <a href="" class="web__design__page__box__card">
+              <img
+                src="../../images/web-design/desktop/image-transfer.jpg"
+                alt=""
+                class="web__design__page__box__car__image"
+                width="350"
+                height="320"
+              />
+              <div class="web__design__page__box__car__box">
+                <h3 class="web__design__page__box__car__box__title">
+                  TRANSFER
+                </h3>
+                <p class="web__design__page__box__car__box__subtitle">
+                  Site for low-cost money transfers and sending money within
+                  seconds
+                </p>
+              </div>
             </a>
-            <a href="./src/pages/project/WebGraphic.html" class="project__link">
-              <h2 class="project__box__title">Graphic Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
+            <a href="" class="web__design__page__box__card">
+              <img
+                class="web__design__page__box__car__image"
+                src="../../images/web-design/desktop/image-photon.jpg"
+                alt=""
+                width="350"
+                height="320"
+              />
+              <div class="web__design__page__box__car__box">
+                <h3 class="web__design__page__box__car__box__title">PHOTON</h3>
+                <p class="web__design__page__box__car__box__subtitle">
+                  A state-of-the-art music player with high-resolution audio and
+                  DSP effects
+                </p>
+              </div>
+            </a>
+            <a href="" class="web__design__page__box__card">
+              <img
+                class="web__design__page__box__car__image"
+                src="../../images/web-design/desktop/image-builder.jpg"
+                alt=""
+                width="350"
+                height="320"
+              />
+              <div class="web__design__page__box__car__box">
+                <h3 class="web__design__page__box__car__box__title">BUILDER</h3>
+                <p class="web__design__page__box__car__box__subtitle">
+                  Connects users with local contractors based on their location
+                </p>
+              </div>
+            </a>
+            <a href="" class="web__design__page__box__card">
+              <img
+                class="web__design__page__box__car__image"
+                src="../../images/web-design/desktop/image-blogr.jpg"
+                alt=""
+                width="350"
+                height="320"
+              />
+              <div class="web__design__page__box__car__box">
+                <h3 class="web__design__page__box__car__box__title">BLOGR</h3>
+                <p class="web__design__page__box__car__box__subtitle">
+                  Blogr is a platform for creating an online blog or publication
+                </p>
+              </div>
+            </a>
+            <a href="" class="web__design__page__box__card">
+              <img
+                class="web__design__page__box__car__image"
+                src="../../images/web-design/desktop/image-camp.jpg"
+                alt=""
+                width="350"
+                height="320"
+              />
+              <div class="web__design__page__box__car__box">
+                <h3 class="web__design__page__box__car__box__title">CAMP</h3>
+                <p class="web__design__page__box__car__box__subtitle">
+                  Get expert training in coding, data, design, and digital
+                  marketing
+                </p>
+              </div>
             </a>
           </div>
         </div>
       </section>
 
-      <section class="feature">
-        <div class="feature__container container">
-          <div class="feature__content">
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-passionate.svg"
-                alt=""
-                class="feature__box__image"
-              />
-              <div class="feature__box__content">
-                <h4 class="feature__box__title">PASSIONATE</h4>
-                <p class="feature__box__subtitle">
-                  Each project starts with an in-depth brand research to ensure
-                  we only create products that serve a purpose. We merge art,
-                  design, and technology into exciting new solutions.
-                </p>
-              </div>
-            </div>
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-resourceful.svg"
-                alt=""
-                class="feature__box__image"
-              />
-              <div class="feature__box__box__content">
-                <h4 class="feature__box__title">RESOURCEFUL</h4>
-                <p class="feature__box__subtitle">
-                  Everything that we do has a strategic purpose. We use an agile
-                  approach in all of our projects and value customer
-                  collaboration. It guarantees superior results that fulfill our
-                  clients’ needs.
-                </p>
-              </div>
-            </div>
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-friendly.svg"
-                alt=""
-                class="feature__box__image"
-              />
-
-              <div class="feature__box__content">
-                <h4 class="feature__box__title">FRIENDLY</h4>
-                <p class="feature__box__subtitle">
-                  We are a group of enthusiastic folks who know how to put
-                  people first. Our success depends on our customers, and we
-                  strive to give them the best experience a company can provide.
-                </p>
-              </div>
-            </div>
+      <section class="web__design__project">
+        <div class="web__design__project__container container">
+          <div class="web__design__project__box">
+            <a
+              href="../../pages/project/WebApp.html"
+              class="web__design__project__link"
+            >
+              <h2 class="web__design__project__box__title">App Deisgn</h2>
+              <p class="web__design__project__box__subtitle">
+                view projects
+                <span class="project__box__icon"></span>
+              </p>
+            </a>
+            <a
+              href="../../pages/project/WebGraphic.html"
+              class="web__design__project__link"
+            >
+              <h2 class="web__design__project__box__title">Graphic Deisgn</h2>
+              <p class="web__design__project__box__subtitle">
+                view projects
+                <span class="project__box__icon"></span>
+              </p>
+            </a>
           </div>
         </div>
       </section>
@@ -175,6 +199,7 @@
         </div>
       </section>
     </main>
+
     <!-- MAIN END -->
     <!-- FOOTER START -->
     <footer class="footer">
@@ -183,7 +208,7 @@
           <a class="footer__logo__link" href="./index.html">
             <img
               class="footer__image"
-              src="./src/images/home/desktop/icon-logo-white.svg"
+              src="../../images/home/desktop/icon-logo-white.svg"
               alt=""
               width="196"
               height="24"
