Add location hero section to contact page with responsive grid layout

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -44,114 +44,75 @@
     <!-- HEADER END -->
     <!-- MAIN START -->
     <main class="main">
-      <section class="hero">
-        <div class="hero__container container">
-          <div class="hero__content">
-            <h1 class="hero__title">
-              Award-winning custom <br />
-              designs and digital <br />
-              branding solutions
-            </h1>
-            <p class="hero__subtitle">
-              With over 10 years in the industry, we are experienced in creating
-              fully responsive websites, app design, and engaging brand
-              experiences. Find out more about our services.
-            </p>
-            <a class="hero__link btn-dark" href="#"> Learn More </a>
+      <section class="hero"></section>
+      <section class="location-hero">
+        <div class="location-hero__container container">
+          <div class="location-hero__box">
+            <h3 class="location-hero__box__title">Canada</h3>
+            <div class="location-hero__box__content">
+              <p class="location-hero__box__content__title">
+                Designo Central Office
+              </p>
+              <p class="location-hero__box__content__text">
+                3886 Wellington Street <br />Toronto, Ontario M9C 3J5
+              </p>
+            </div>
+            <div class="location-hero__box__content"></div>
           </div>
 
-          <div class="hero__box">
-            <div class="hero__box__images">
-              <img
-                src="./src/images/home/desktop/image-hero-phone.png"
-                alt=""
-                class="hero__box__image"
-                width="572"
-                height="540"
-              />
+          <div class="location-hero__box">
+            <img
+              class="location-hero__box__image"
+              src="../images/locations/desktop/image-map-canada.png"
+              alt=""
+            />
+          </div>
+
+          <div class="location-hero__box">
+            <img
+              class="location-hero__box__image"
+              src="../images/locations/desktop/image-map-australia.png"
+              alt=""
+            />
+          </div>
+
+          <div class="location-hero__box">
+            <h3 class="location-hero__box__title">Australia</h3>
+            <div class="location__box">
+              <div class="location-hero__box__content">
+                <p class="footer__content__text">Designo AU Office</p>
+                <p class="footer__contetn__text">
+                  19 Balonne Street <br />New South Wales 2443
+                </p>
+              </div>
+              <div class="location-hero__box__content">
+                <p class="footer__content__text">Contact</p>
+                <a class="footer__contetn__link" href="tel:(02) 6720 9092"
+                  >P : (02) 6720 9092</a
+                >
+                <a
+                  class="footer__contetn__link"
+                  href="mailto:contact@designo.co"
+                  >M : contact@designo.au</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-      </section>
 
-      <section class="project">
-        <div class="project__container container">
-          <div class="project__box">
-            <a href="./src/pages/project/WebDesign.html" class="project__link">
-              <h2 class="project__box__title">Web Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
-            </a>
-            <a href="./src/pages/project/WebApp.html" class="project__link">
-              <h2 class="project__box__title">App Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
-            </a>
-            <a href="./src/pages/project/WebGraphic.html" class="project__link">
-              <h2 class="project__box__title">Graphic Deisgn</h2>
-              <p class="project__box__subtitle">
-                view projects
-                <span class="project__box__icon"></span>
-              </p>
-            </a>
+          <div class="location-hero__box">
+            <img
+              src="../images/locations/desktop/image-map-australia.png"
+              alt=""
+              class="location-hero__image"
+            />
           </div>
-        </div>
-      </section>
 
-      <section class="feature">
-        <div class="feature__container container">
-          <div class="feature__content">
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-passionate.svg"
-                alt=""
-                class="feature__box__image"
-              />
-              <div class="feature__box__content">
-                <h4 class="feature__box__title">PASSIONATE</h4>
-                <p class="feature__box__subtitle">
-                  Each project starts with an in-depth brand research to ensure
-                  we only create products that serve a purpose. We merge art,
-                  design, and technology into exciting new solutions.
-                </p>
-              </div>
-            </div>
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-resourceful.svg"
-                alt=""
-                class="feature__box__image"
-              />
-              <div class="feature__box__box__content">
-                <h4 class="feature__box__title">RESOURCEFUL</h4>
-                <p class="feature__box__subtitle">
-                  Everything that we do has a strategic purpose. We use an agile
-                  approach in all of our projects and value customer
-                  collaboration. It guarantees superior results that fulfill our
-                  clients’ needs.
-                </p>
-              </div>
-            </div>
-            <div class="feature__box">
-              <img
-                src="./src/images/home/desktop/illustration-friendly.svg"
-                alt=""
-                class="feature__box__image"
-              />
-
-              <div class="feature__box__content">
-                <h4 class="feature__box__title">FRIENDLY</h4>
-                <p class="feature__box__subtitle">
-                  We are a group of enthusiastic folks who know how to put
-                  people first. Our success depends on our customers, and we
-                  strive to give them the best experience a company can provide.
-                </p>
-              </div>
-            </div>
+          <div class="location-hero__box">
+            <img
+              class="location__image"
+              src="../images/locations/desktop/image-map-united-kingdom.png"
+              alt=""
+            />
           </div>
         </div>
       </section>
@@ -177,7 +138,7 @@
           <a class="footer__logo__link" href="./index.html">
             <img
               class="footer__image"
-              src="./src/images/home/desktop/icon-logo-white.svg"
+              src="../images/home/desktop/icon-logo-white.svg"
               alt=""
               width="196"
               height="24"
