Add contact hero section with responsive design; update navigation links and include new SVG background

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -46,36 +46,43 @@
     <!-- HEADER END -->
     <!-- MAIN START -->
     <main class="main">
-      <section class="hero">
-        <div class="hero__container container">
-          <div class="hero__content">
-            <h1 class="hero__title">
-              Award-winning custom <br />
-              designs and digital <br />
-              branding solutions
-            </h1>
-            <p class="hero__subtitle">
-              With over 10 years in the industry, we are experienced in creating
-              fully responsive websites, app design, and engaging brand
-              experiences. Find out more about our services.
+      <section class="contact__hero">
+        <div class="contact__hero__container container">
+          <div class="contact__hero__content">
+            <h1 class="contact__hero__title">Contact Us</h1>
+            <p class="contact__hero__subtitle">
+              Ready to take it to the next level? Let’s talk about your project
+              or idea and find out how we can help your business grow. If you
+              are looking for unique digital experiences that’s relatable to
+              your users, drop us a line.
             </p>
-            <a class="hero__link btn-dark" href="#"> Learn More </a>
           </div>
 
-          <div class="hero__box">
-            <div class="hero__box__images">
-              <img
-                src="./src/images/home/desktop/image-hero-phone.png"
-                alt=""
-                class="hero__box__image"
-                width="572"
-                height="540"
-              />
-            </div>
+          <div class="contact__hero__box">
+            <input
+              class="contact__hero__box__input input-name"
+              type="text"
+              placeholder="Name"
+            />
+            <input
+              class="contact__hero__box__input input-email"
+              type="email"
+              placeholder="Email Address"
+            />
+            <input
+              class="contact__hero__box__input input-phone"
+              type="tel"
+              placeholder="Phone"
+            />
+            <input
+              class="contact__hero__box__input input-massage"
+              type="text"
+              placeholder="Your Message"
+            />
+            <a href="#" class="contact__hero__box__btn btn-dark">Submit</a>
           </div>
         </div>
       </section>
-
       <section class="location">
         <div class="location__container container">
           <div class="location__content">
@@ -121,7 +128,6 @@
           </div>
         </div>
       </section>
-
       <section class="about">
         <div class="about__container container">
           <div class="about__box">
@@ -154,13 +160,19 @@
           <nav class="footer__sitenav">
             <ul class="footer__sitenav__list">
               <li class="footer__sitenav__item">
-                <a href="#" class="footer__sitenav__link">OUR COMPANY</a>
+                <a href="./about.html" class="footer__sitenav__link"
+                  >OUR COMPANY</a
+                >
               </li>
               <li class="footer__sitenav__item">
-                <a href="#" class="footer__sitenav__link">LOCATIONS</a>
+                <a href="./location.html" class="footer__sitenav__link"
+                  >LOCATIONS</a
+                >
               </li>
               <li class="footer__sitenav__item">
-                <a href="#" class="footer__sitenav__link">CONTACT</a>
+                <a href="./contact.html" class="footer__sitenav__link"
+                  >CONTACT</a
+                >
               </li>
             </ul>
           </nav>
