--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -32,10 +32,12 @@
               <a href="./about.html" class="sitenav__link">OUR COMPANY</a>
             </li>
             <li class="sitenav__item">
-              <a href="./contact.html" class="sitenav__link">LOCATIONS</a>
+              <a href="../pages/location.html" class="sitenav__link"
+                >LOCATIONS</a
+              >
             </li>
             <li class="sitenav__item">
-              <a href="./contact.html" class="sitenav__link">CONTACT</a>
+              <a href="../pages/contact.html" class="sitenav__link">CONTACT</a>
             </li>
           </ul>
         </nav>
