--- a/src/pages/location.html
+++ b/src/pages/location.html
@@ -52,14 +52,29 @@
           <div class="location-hero__box">
             <h3 class="location-hero__box__title">Canada</h3>
             <div class="location-hero__box__content">
-              <p class="location-hero__box__content__title">
-                Designo Central Office
-              </p>
-              <p class="location-hero__box__content__text">
-                3886 Wellington Street <br />Toronto, Ontario M9C 3J5
-              </p>
+              <div class="location-hero__box__content__box">
+                <p class="location-hero__box__content__box__title">
+                  Designo Central Office
+                </p>
+                <p class="location-hero__box__content__box__text">
+                  3886 Wellington Street <br />Toronto, Ontario M9C 3J5
+                </p>
+              </div>
+              <div class="location-hero__box__content__box">
+                <p class="location-hero__box__content__box__title">Contact</p>
+                <a
+                  href="tel:+1 253-863-8967"
+                  class="location-hero__box__content__box__link"
+                  >P : +1 253-863-8967</a
+                >
+                <a
+                  href="https://mail.google.com/mail"
+                  class="location-hero__box__content__box__link"
+                >
+                  M : contact@designo.co</a
+                >
+              </div>
             </div>
-            <div class="location-hero__box__content"></div>
           </div>
 
           <div class="location-hero__box">
@@ -80,22 +95,55 @@
 
           <div class="location-hero__box">
             <h3 class="location-hero__box__title">Australia</h3>
-            <div class="location__box">
-              <div class="location-hero__box__content">
-                <p class="footer__content__text">Designo AU Office</p>
-                <p class="footer__contetn__text">
+            <div class="location-hero__box__content">
+              <div class="location-hero__box__content__box">
+                <p class="location-hero__box__content__box__title">
+                  Designo AU Office
+                </p>
+                <p class="location-hero__box__content__box__text">
                   19 Balonne Street <br />New South Wales 2443
                 </p>
               </div>
-              <div class="location-hero__box__content">
-                <p class="footer__content__text">Contact</p>
-                <a class="footer__contetn__link" href="tel:(02) 6720 9092"
+              <div class="location-hero__box__content__box">
+                <p class="location-hero__box__content__box__title">Contact</p>
+                <a
+                  href="tel:(02) 6720 9092"
+                  class="location-hero__box__content__box__link"
                   >P : (02) 6720 9092</a
                 >
                 <a
-                  class="footer__contetn__link"
-                  href="mailto:contact@designo.co"
-                  >M : contact@designo.au</a
+                  href="https://mail.google.com/mail"
+                  class="location-hero__box__content__box__link"
+                >
+                  M : contact@designo.au</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="location-hero__box">
+            <h3 class="location-hero__box__title">United Kingdom</h3>
+            <div class="location-hero__box__content">
+              <div class="location-hero__box__content__box">
+                <p class="location-hero__box__content__box__title">
+                  Designo UK Office
+                </p>
+                <p class="location-hero__box__content__box__text">
+                  13 Colorado Way <br />Rhyd-y-fro SA8 9GA
+                </p>
+              </div>
+              <div class="location-hero__box__content__box">
+                <p class="location-hero__box__content__box__title">Contact</p>
+                <a
+                  href="tel: 078 3115 1400"
+                  class="location-hero__box__content__box__link"
+                  >P : 078 3115 1400</a
+                >
+                <a
+                  href="https://mail.google.com/mail"
+                  class="location-hero__box__content__box__link"
+                >
+                  M : contact@designo.uk</a
                 >
               </div>
             </div>
@@ -103,15 +151,7 @@
 
           <div class="location-hero__box">
             <img
-              src="../images/locations/desktop/image-map-australia.png"
-              alt=""
-              class="location-hero__image"
-            />
-          </div>
-
-          <div class="location-hero__box">
-            <img
-              class="location__image"
+              class=".location-hero__box__image"
               src="../images/locations/desktop/image-map-united-kingdom.png"
               alt=""
             />
@@ -151,13 +191,19 @@
           <nav class="footer__sitenav">
             <ul class="footer__sitenav__list">
               <li class="footer__sitenav__item">
-                <a href="#" class="footer__sitenav__link">OUR COMPANY</a>
+                <a href="../pages/about.html" class="footer__sitenav__link"
+                  >OUR COMPANY</a
+                >
               </li>
               <li class="footer__sitenav__item">
-                <a href="#" class="footer__sitenav__link">LOCATIONS</a>
+                <a href="../pages/location.html" class="footer__sitenav__link"
+                  >LOCATIONS</a
+                >
               </li>
               <li class="footer__sitenav__item">
-                <a href="#" class="footer__sitenav__link">CONTACT</a>
+                <a href="../pages/contact.html" class="footer__sitenav__link"
+                  >CONTACT</a
+                >
               </li>
             </ul>
           </nav>
